# expenses-tracker

./: .gitignore  README.md  generate_report.ipynb  ruff.toml  setup.cfg  setup.py
01_preprocessing/: preprocess_raw_data.ipynb
01_report/: 01_generate_report.ipynb
02_report/: 01_generate_report.ipynb
custom_reports/: generate_report_networth.ipynb
data/raw/: dummy_data.csv
reports/dummy/: report_2023.html
settings/: 1money.json  custom.json  dummy.json  fleur.json  inbank.json
settings/daniele/: fleur.json
settings/federico/: inbank.json
settings/fleur/: fleur.json
settings/mansi/: 1money.json
src/expenses_tracker/: networth.py  report.py
tests_manual/: 01_report.ipynb  02_report_networth.ipynb
tests_manual/settings/: custom.json  dummy.json
tests_manual/settings/daniele/: fleur.json
tests_manual/settings/federico/: inbank.json
tests_manual/settings/fleur/: fleur.json
tests_manual/settings/mansi/: 1money.json
utils/: preprocessing.py  report.py
