[metadata]

# distribution name of the package
name = expenses-tracker

# package version
version = 0.0.1

# used to identify the author of the package
author = Daniele Passabì
author_email = dany.passabi@me.com

# short, one-sentence summary of the package
description = Expenses and Networth Tracker

# detailed description of the package, loaded from README.md (common pattern)
long_description = file: README.md

# what type of markup is used for the long description
long_description_content_type = text/markdown

# URL for the homepage of the project
url = https://www.linkedin.com/in/daniele-passabi

# lets you list any number of extra links to show on PyPI
project_urls =
    MyPortfolio = https://www.linkedin.com/in/daniele-passabi

# gives the index and pip some additional metadata about your package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# here in [options] we have controls for setuptools itself
[options]

# mapping of package names and directories, in this case the 'package' directory is designated the root package
package_dir =
    = src

# list of all Python import packages that should be included in the distribution package
packages = find:

# versions of Python supported by your project
python_requires = >=3.10

# additional options
[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.XXX files, include them:
* = *.json, *.pkl, *.sav, *.json